--- a/aa-get-start/src/app/app.component.html
+++ b/aa-get-start/src/app/app.component.html
@@ -1,3 +1,30 @@
-<h1>{{title}}</h1>
-<input type="text" [(ngModel)]="name"/>
-<p class="huge">{{name}}</p>
+<div class="container">
+  <div class="jumbotron">
+    <h1>Aww yeah!</h1>
+    <h2>Angular, may I introduce you to Bootstrap!</h2>
+  </div>
+  <blockquote>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+    <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+  </blockquote>
+  <!-- Standard button -->
+  <button type="button" class="btn btn-default">Default</button>
+
+  <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+  <button type="button" class="btn btn-primary">Primary</button>
+
+  <!-- Indicates a successful or positive action -->
+  <button type="button" class="btn btn-success">Success</button>
+
+  <!-- Contextual button for informational alert messages -->
+  <button type="button" class="btn btn-info">Info</button>
+
+  <!-- Indicates caution should be taken with this action -->
+  <button type="button" class="btn btn-warning">Warning</button>
+
+  <!-- Indicates a dangerous or potentially negative action -->
+  <button type="button" class="btn btn-danger">Danger</button>
+
+  <!-- Deemphasize a button by making it look like a link while maintaining button behavior -->
+  <button type="button" class="btn btn-link">Link</button>
+</div>
