--- a/ab-the-basics/code-along/src/app/server/server.component.html
+++ b/ab-the-basics/code-along/src/app/server/server.component.html
@@ -1,1 +1,1 @@
-<h2>This message is coming to you from the {{title}}!</h2>
+<p [ngStyle]="{'background-color': getColor()}">Server name: {{ name }}, status: {{ status }}</p>
