--- a/ab-the-basics/code-along/src/app/servers/servers.component.html
+++ b/ab-the-basics/code-along/src/app/servers/servers.component.html
@@ -1,3 +1,9 @@
-<h1>Servers:</h1>
-<div class="app-server"></div>
-<div class="app-server"></div>
+<h1>Server List:</h1>
+<div class="form-group">
+  <label for="server-input-field">Create new server:</label>
+  <input [(ngModel)]="serverName" class="form-control input-lg" type="text" placeholder="enter server name..." id="server-input-field">
+</div>
+<div class="form-group">
+  <button (click)="addServer()" class="btn btn-success" type="button" name="button">Add Server</button>
+</div>
+<app-server *ngFor="let server of serverList"></app-server>
