--- a/course-project/src/app/app.component.html
+++ b/course-project/src/app/app.component.html
@@ -1,13 +1,9 @@
+<app-header></app-header>
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
-      <app-header></app-header>
-    </div>
-    <div class="col-xs-6">
-      <app-recipes></app-recipes>
-    </div>
-    <div class="col-xs-6">
-      <app-shopping-list></app-shopping-list>
+    <div class="col-md-12">
+        <app-recipes></app-recipes>
+        <app-shopping-list></app-shopping-list>
     </div>
   </div>
 </div>
