--- a/ad-debugging/src/app/app.component.html
+++ b/ad-debugging/src/app/app.component.html
@@ -5,10 +5,7 @@
       <button class="btn btn-primary" (click)="onAddServer()">Add Server</button>
       <br><br>
       <ul class="list-group">
-        <li
-          class="list-group-item"
-          *ngFor="let server of servers; let i = index"
-          (click)="onRemoveServer(i)">{{ server }}</li>
+        <li class="list-group-item" *ngFor="let server of servers; let i = index" (click)="onRemoveServer(i)">{{ server }}</li>
       </ul>
     </div>
   </div>
