--- a/ae-comp-data-deep-dive/assignment/src/app/even/even.component.html
+++ b/ae-comp-data-deep-dive/assignment/src/app/even/even.component.html
@@ -1,9 +1,6 @@
 <div class="jumbotron">
   <h2 class="text-center">Even Numbers</h2>
   <ul class="list-group">
-    <li class="list-group-item list-group-item-info text-center">2</li>
-    <li class="list-group-item list-group-item-info text-center">4</li>
-    <li class="list-group-item list-group-item-info text-center">6</li>
+    <ng-content></ng-content>
   </ul>
-  <p>
 </div>
