--- a/course-project/src/app/header/header.component.html
+++ b/course-project/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default" (click)="navClick($event)">
     <div class="container-fluid">
         <div class="navbar-header">
             <a href="#" class="navbar-brand">Recipe Book</a>
@@ -10,7 +10,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle">Manage <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle">Manage<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Save Data</a></li>
                         <li><a href="#">Fetch Data</a></li>
