--- a/course-project/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/course-project/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,20 +1,22 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="" alt="" class="img-responsive">
+    <h1>{{ recipe.name }}</h1>
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>Recipe Name</h1>
+    <img src="{{ recipe.imagePath }}" class="img-responsive img-thumbnail" alt="Responsive image">
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
+    <hr>
     <div class="btn-group">
       <button type="button" class="btn btn-primary dropdown-toggle">
         Manage Recipe
         <span class="caret"></span>
       </button>
+      <hr>
       <ul class="dropdown-menu">
         <li>
           <a href="#">To Shopping List</a>
@@ -31,11 +33,12 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Description
+    {{ recipe.description }}
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Ingredients
+    <h3>Ingredients</h3>
+    <hr>
   </div>
 </div>
