--- a/course-project/src/app/recipes/recipes.component.html
+++ b/course-project/src/app/recipes/recipes.component.html
@@ -1,8 +1,13 @@
 <div class="row">
     <div class="col-md-5">
-        <app-recipe-list></app-recipe-list>
+        <app-recipe-list (onRecipeClick)="currentRecipe = $event"></app-recipe-list>
     </div>
     <div class="col-md-7">
-        <app-recipe-detail></app-recipe-detail>
+        <app-recipe-detail
+          *ngIf="currentRecipe; else infoText"
+          [recipe]="currentRecipe"></app-recipe-detail>
+        <ng-template #infoText>
+          <h3>Select a recipe!</h3>
+        </ng-template>
     </div>
 </div>
