--- a/ag-directives-deepdive/codealong/src/app/app.component.html
+++ b/ag-directives-deepdive/codealong/src/app/app.component.html
@@ -4,18 +4,24 @@
       <button class="btn btn-primary" (click)="toggleOdd()">Only show odd numbers</button>
       <ul class="list-group">
         <div *ngIf="!oddNumbers; else onlyOdd;">
-          <li *ngFor="let number of numbers" class="list-group-item">
+          <li
+            [ngClass]="{'odd': number % 2 !== 0}"
+            [ngStyle]="{color: number % 2 === 0 ? 'dodgerblue' : 'transparent'}"
+            *ngFor="let number of getNumbers()"
+            class="list-group-item">
             {{ number }}
           </li>
         </div>
         <ng-template #onlyOdd>
-          <span *ngFor="let number of numbers">
-            <li *ngIf="number % 2 === 1" class="list-group-item">
-              {{ number }}
-            </li>
-          </span>
+          <li
+            *ngFor="let number of getNumbers('odd')"
+            appBasicHighlight
+            class="list-group-item">
+            {{ number }}
+          </li>
         </ng-template>
       </ul>
+      <p appBetterHighlight [defaultColor]="'#337ab7'" [highlightColor]="'darkblue'">Styled with Renderer2 directive</p>
     </div>
   </div>
 </div>
