--- a/course-project/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/course-project/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -11,7 +11,7 @@
 <div class="row">
   <div class="col-xs-12">
     <hr>
-    <div class="btn-group open">
+    <div appDropdown class="btn-group dropup"><!-- .open to show dropdown menu -->
       <button type="button" class="btn btn-primary dropdown-toggle">
         Manage Recipe
         <span class="caret"></span>
