--- a/course-project/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/course-project/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -11,7 +11,7 @@
 <div class="row">
   <div class="col-xs-12">
     <hr>
-    <div appDropdown><!-- CSS classes provided by custom directive -->
+    <div appDropdown class="btn-group dropup"> <!-- CSS class 'open' controlled via custom Directive -->
       <button type="button" class="btn btn-primary dropdown-toggle">
         Manage Recipe
         <span class="caret"></span>
