--- a/course-project/src/app/header/header.component.html
+++ b/course-project/src/app/header/header.component.html
@@ -9,7 +9,7 @@
                 <li><a href="#">Shopping List</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
+                <li appDropdown class="dropdown">
                     <a href="#" class="dropdown-toggle">Manage<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Save Data</a></li>
