--- a/course-project/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/course-project/src/app/recipes/recipe-list/recipe-list.component.html
@@ -8,7 +8,6 @@
     <hr>
     <app-recipe-item
       *ngFor="let recipeItem of recipes"
-      [recipe]="recipeItem"
-      (onRecipeClick)="recipeItemClick(recipeItem)"></app-recipe-item>
+      [recipe]="recipeItem"></app-recipe-item>
   </div>
 </div>
