--- a/course-project/src/app/shopping-list/shopping-list.component.html
+++ b/course-project/src/app/shopping-list/shopping-list.component.html
@@ -1,13 +1,11 @@
 <div class="row">
   <div class="col-xs-10">
-    <app-shopping-edit
-      (addIngredient)="ingredients.push($event)">
+    <app-shopping-edit>
     </app-shopping-edit>
     <hr>
     <ul class="list-group">
       <a href="#" class="list-group-item" style="cursor: pointer" *ngFor="let ingredient of ingredients">
-        {{ ingredient.name }}
-        ({{ingredient.amount}})
+        {{ ingredient.name }} ({{ingredient.amount}})
       </a>
     </ul>
   </div>
