--- a/ak-routing/code-along/src/app/home/home.component.html
+++ b/ak-routing/code-along/src/app/home/home.component.html
@@ -4,5 +4,7 @@
     <div class="page-header">
       <h1>Welcome to Server Manager 4.0 <small>Manage your Servers and Users.</small></h1>
     </div>
+    <button class="btn btn-primary" (click)="onClick('/servers')">Go to Servers</button>
+    <button class="btn btn-primary" (click)="onClick('/users')">Go to Users</button>
   </div>
 </div>
