--- a/ak-routing/code-along/src/app/servers/servers.component.html
+++ b/ak-routing/code-along/src/app/servers/servers.component.html
@@ -2,29 +2,16 @@
 <div class="row">
   <div class="col-xs-12 col-md-4">
     <ul class="list-group">
-      <span *ngFor="let server of servers; let i = index;">
-        <li (click)="onServerClick(i)" class="list-group-item">
+      <span *ngFor="let server of servers;">
+        <li
+          [routerLink]="['/servers', server.id]"
+          class="list-group-item">
           {{ server.name }}
         </li>
       </span>
     </ul>
   </div>
   <div class="col-xs-12 col-md-4">
-    <form>
-      <div class="form-group">
-        <label>Server Name</label>
-        <input type="text" class="form-control" [value]="servers[selectedServerIndex].name" #serverName>
-      </div>
-      <div class="form-group">
-        <label>Server Status</label>
-        <select class="form-control" [value]="servers[selectedServerIndex].status" #serverStatus>
-          <option *ngFor="let option of serverStatusOptions">{{ option }}</option>
-        </select>
-      </div>
-      <button (click)="onServerUpdate()" type="button" class="btn btn-primary">Update Server</button>
-    </form>
-    <p><strong>{{ servers[selectedServerIndex].name }}</strong></p>
-    <p>Server status is <strong>{{ servers[selectedServerIndex].status }}</strong></p>
-    <button class="btn btn-primary" (click)="onReloadClick()">Reload the page</button>
+    <router-outlet></router-outlet>
   </div>
 </div>
