--- a/ak-routing/code-along/src/app/users/users.component.html
+++ b/ak-routing/code-along/src/app/users/users.component.html
@@ -2,14 +2,16 @@
 <div class="row">
   <div class="col-xs-12 col-md-4">
     <ul class="list-group">
-      <span *ngFor="let user of users; let i = index;">
-        <li (click)="onUserClick(i)" class="list-group-item">
+      <span *ngFor="let user of users;">
+        <li
+          [routerLink]="['/users', user.id, user.name]"
+          class="list-group-item">
           {{ user.name }}
         </li>
       </span>
     </ul>
   </div>
   <div class="col-xs-12 col-md-4">
-    <app-user></app-user>
+    <router-outlet></router-outlet>
   </div>
 </div>
