--- a/course-project/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/course-project/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -17,9 +17,9 @@
         <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><span (click)="onToShoppingList()">To Shopping List</span></li> <!-- change back to a element? remember to delete the custom CSS -->
-        <li><a href="#">Edit Recipe</a></li>
-        <li><a href="#">Delete Recipe</a></li>
+        <li><a (click)="onToShoppingList()">To Shopping List</a></li>
+        <li><a (click)="onEditClick()">Edit Recipe</a></li>
+        <li><a>Delete Recipe</a></li>
       </ul>
     </div>
   </div>
