--- a/course-project/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/course-project/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,4 @@
-<a href="#" class="list-group-item clearfix" (click)="recipeItemClick(recipe)">
+<a routerLinkActive="active" [routerLink]="[recipe.name]" class="list-group-item clearfix">
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
     <p class="list-group-item-text">{{ recipe.description }}</p>
