--- a/course-project/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/course-project/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn btn-success">New Recipe</button>
+    <!-- the click method below could have more easily been accomplished with routerLink="new" -->
+    <a (click)="onNewClick()" class="btn btn-success">New Recipe</a>
   </div>
 </div>
 <div class="row">
