--- a/course-project/src/app/header/header.component.html
+++ b/course-project/src/app/header/header.component.html
@@ -1,19 +1,19 @@
-<nav class="navbar navbar-default" (click)="navClick($event)">
+<nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
             <a href="#" class="navbar-brand">Recipe Book</a>
         </div>
         <div class="navbar-default">
             <ul class="nav navbar-nav">
-                <li><a href="#">Recipes</a></li>
-                <li><a href="#">Shopping List</a></li>
+                <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
+                <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li appDropdown class="dropdown">
-                    <a href="#" class="dropdown-toggle">Manage<span class="caret"></span></a>
+                    <a class="dropdown-toggle">Manage<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Save Data</a></li>
-                        <li><a href="#">Fetch Data</a></li>
+                        <li><a >Save Data</a></li>
+                        <li><a >Fetch Data</a></li>
                     </ul>
                 </li>
             </ul>
