--- a/am-observables/code-along/src/app/user/user.component.html
+++ b/am-observables/code-along/src/app/user/user.component.html
@@ -1,1 +1,4 @@
 <p>User with <strong>ID {{ id }}</strong> loaded</p>
+<button class="btn btn-info" (click)="onActivate()">{{buttonMessage}}</button>
+<h3>Params Object:</h3>
+<code>{{ paramsString }}</code>
