--- a/course-project/src/app/header/header.component.html
+++ b/course-project/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a href="#" class="navbar-brand">Recipe Book</a>
+            <a routerLink="/" class="navbar-brand">Recipe Book</a>
         </div>
         <div class="navbar-default">
             <ul class="nav navbar-nav">
@@ -12,8 +12,8 @@
                 <li appDropdown class="dropdown">
                     <a class="dropdown-toggle">Manage<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a >Save Data</a></li>
-                        <li><a >Fetch Data</a></li>
+                        <li><a>Save Data</a></li>
+                        <li><a>Fetch Data</a></li>
                     </ul>
                 </li>
             </ul>
