--- a/ao-forms/td-forms-assignment/src/app/component/home/home.component.html
+++ b/ao-forms/td-forms-assignment/src/app/component/home/home.component.html
@@ -1,3 +1,34 @@
-<p>
-  home works!
-</p>
+<a routerLink="/form" class="btn btn-primary">Go to the form!</a>
+<h1>Template Driven Form Exercise</h1>
+<h3>Instructions:</h3>
+<ol>
+  <li>
+    <p>Add a form with the following inputs (and validators):</p>
+    <ul>
+      <li>Email address (should not be empty, should be in a valid email address format)</li>
+      <li>A dropdown which allows the user to select one of three different subscriptions: 'Basic', 'Advanced', 'Professional'. Set 'Advanced' as the default</li>
+      <li>A password field (should not be empty)</li>
+      <li>A submit button</li>
+    </ul>
+  </li>
+  <li>Display a warning message if the form is invalid AND was touched. Display a warning message below each input if it's invalid.</li>
+  <li>Upon submitting the form, you should simply print the value of the form to the console.</li>
+  <li>Optionally, display the form data as a component.</li>
+</ol>
+<hr>
+<h1>App Blueprint</h1>
+<h3>Features:</h3>
+<ul>
+  <li>
+    Components: home (assignment instructions), form, form-confirm, form-submit
+  </li>
+  <li>
+    Routing:
+  </li>
+  <li>
+    Service: form-data
+  </li>
+  <li>
+    Model: form
+  </li>
+</ul>
