--- a/ao-forms/td-forms-assignment/src/app/component/form/form.component.html
+++ b/ao-forms/td-forms-assignment/src/app/component/form/form.component.html
@@ -3,17 +3,25 @@
   <div class="form-group">
     <label>Email</label>
     <input
+      #email="ngModel"
       ngModel
+      required
+      email
       name="email"
       type="email"
       class="form-control"
-      placeholder="enter your email...">
+      [ngClass]="{
+        'entry-needed': email.pristine,
+        'entry-error': email.invalid && email.touched,
+        'entry-valid': email.valid && email.touched}">
+    <p *ngIf="email.invalid && email.touched" class="message-error">Please enter a valid email address.</p>
   </div>
   <div class="form-group">
     <label>Subscription Package</label>
     <select
       ngModel
-      name="package"
+      name="subscriptionLevel"
+      [ngModel]="formDataService.packages[1]"
       class="form-control">
       <option
         *ngFor="let package of formDataService.packages">
@@ -24,11 +32,19 @@
   <div class="form-group">
     <label>Password</label>
     <input
+      #password="ngModel"
       ngModel
+      required
       name="password"
       type="password"
-      class="form-control">
+      class="form-control"
+      [ngClass]="{
+        'entry-needed': password.pristine,
+        'entry-error': password.invalid && password.touched,
+        'entry-valid': password.valid && password.touched}">
+    <p *ngIf="password.invalid && password.touched" class="message-error">Please enter a password.</p>
   </div>
   <button type="button" class="btn btn-default" (click)=onClear()>Clear</button>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="button" class="btn btn-info" (click)="onAutoGenerate()">Auto Generate</button>
+  <button type="submit" class="btn btn-primary" [disabled]="form.invalid">Submit</button>
 </form>
