--- a/ao-forms/td-forms-assignment/src/app/component/home/home.component.html
+++ b/ao-forms/td-forms-assignment/src/app/component/home/home.component.html
@@ -23,10 +23,10 @@
     Components: home (assignment instructions), form, form-confirm, form-submit
   </li>
   <li>
-    Routing:
+    Routing: include a guard that only allows form-submit if a form-confirm is visited first
   </li>
   <li>
-    Service: form-data
+    Service: form-data, boolean property that confirms if data has been validated
   </li>
   <li>
     Model: form
