--- a/ao-forms/td-forms-assignment/src/app/component/form-submit/form-submit.component.html
+++ b/ao-forms/td-forms-assignment/src/app/component/form-submit/form-submit.component.html
@@ -1,3 +1,2 @@
-<p>
-  form-submit works!
-</p>
+<h1>Your form has been submitted!</h1>
+<button class="btn btn-primary" routerLink="/home">Return to the home page.</button>
