--- a/ao-forms/td-forms-assignment/src/app/component/form-confirm/form-confirm.component.html
+++ b/ao-forms/td-forms-assignment/src/app/component/form-confirm/form-confirm.component.html
@@ -14,4 +14,4 @@
   </tr>
 </table>
 <button class="btn btn-warning" routerLink="/form">No, let me change it.</button>
-<button class="btn btn-success" routerLink="/form-submit">Looks good!</button>
+<button class="btn btn-success" (click)="looksGood()">Looks good!</button>
