--- a/course-project/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/course-project/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,20 +1,38 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form (ngSubmit)="onSubmit()" #ingredientForm="ngForm">
       <div class="row">
-        <div class="col-sm-5 form-group">
-          <label for="name">Name</label>
-          <input type="text" id="name" class="form-control" #nameInput>
+        <div class="col-sm-6 col-offset-2 form-group">
+          <label for="name">Ingredient</label>
+          <input
+            type="text"
+            id="name"
+            class="form-control"
+            ngModel
+            name="name"
+            required>
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
-          <input type="number" id="amount" class="form-control" #amountInput>
+          <input
+            type="number"
+            id="amount"
+            class="form-control"
+            ngModel
+            name="amount"
+            required
+            pattern="^[1-9]+[0-9]*$">
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="button" (click)="btnClick('add')">Add</button>
-          <button class="btn btn-danger" type="button" (click)="btnClick('delete')">Delete</button>
+          <div *ngIf="ingredientForm.invalid && ingredientForm.controls.amount.touched && ingredientForm.controls.name.touched" class="alert alert-danger">
+            Please correct the form to add an ingredient.
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <button class="btn btn-success" type="submit" [disabled]="ingredientForm.invalid">Add</button>
+          <button class="btn btn-danger" type="button">Delete</button>
           <button class="btn btn-primary" type="button" (click)="clearInputs()">Clear</button>
         </div>
       </div>
