--- a/course-project/src/app/shopping-list/shopping-list.component.html
+++ b/course-project/src/app/shopping-list/shopping-list.component.html
@@ -4,8 +4,12 @@
     </app-shopping-edit>
     <hr>
     <ul class="list-group">
-      <a href="#" class="list-group-item" style="cursor: pointer" *ngFor="let ingredient of ingredients">
-        {{ ingredient.name }} ({{ingredient.amount}})
+      <a
+        class="list-group-item"
+        style="cursor: pointer"
+        (click)="onEditItem(i)"
+        *ngFor="let ingredient of ingredients; let i = index;">
+        #{{ i }} - {{ ingredient.name }} ({{ingredient.amount}})
       </a>
     </ul>
   </div>
